# escalated-django

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  ruff.toml
.github/workflows/: lint.yml  run-tests.yml  workflow.yml
docker/: Dockerfile  README.md  compose.yml  entrypoint.sh
docker/host-app/: manage.py
docs/: plugins.md
docs/translations/: README.ar.md  README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.nl.md  README.pl.md  README.pt-BR.md  README.ru.md  README.tr.md  README.zh-CN.md
escalated/: __init__.py  action_registry.py  api_middleware.py  api_serializers.py  api_urls.py  apps.py  broadcasting.py  channel_routing.py  conf.py  consumers.py  handlers.py  hook_registry.py  hooks.py  kb_guards.py  locale_paths.py  mention_models.py  middleware.py  mixins.py  models.py  newsletter_conf.py  newsletter_permissions.py  newsletter_urls.py  outbound_security.py  permissions.py  plugin_models.py  plugin_service.py  plugin_ui_service.py  rendering.py  serializers.py  signals.py  ticket_subjects.py  urls.py  validators.py  workflow_handlers.py  workflow_models.py
escalated/bridge/: __init__.py  context_handler.py  json_rpc_client.py  plugin_bridge.py  plugin_store_record.py  route_registrar.py
escalated/contracts/: __init__.py  import_adapter.py  ticket_subject.py
escalated/drivers/: __init__.py  api_client.py  cloud.py  local.py  synced.py
escalated/mail/: __init__.py  inbound_message.py  message_id_util.py  threading.py
escalated/migrations/: 0001_initial.py  0002_settings_and_guest_tickets.py  0003_inboundemail.py  0004_v040_advanced_features.py  0005_api_tokens.py  0005_escalatedplugin.py  0006_merge_api_tokens_and_plugins.py  0007_platform_parity_phase1.py  (+24 more)
tests/: conftest.py  factories.py  settings.py  test_newsletter_bounce_store.py  test_newsletter_dispatch_command.py  test_newsletter_dispatcher.py  test_newsletter_http.py  test_newsletter_planner.py  test_newsletter_renderer.py  test_newsletter_segment_resolver.py  test_newsletter_tracker.py  test_user_permissions.py  test_uuid_user_keys.py  urls.py
(+168 files in other folders)
