[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "escalated-django"
version = "0.1.0"
description = "Embeddable support ticket system for Django"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Escalated Dev", email = "hello@escalated.dev"}]
dependencies = [
    "django>=4.2",
    "inertia-django>=1.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "factory-boy>=3.2",
    "faker>=18.0",
]

[project.urls]
Homepage = "https://github.com/escalated-dev/escalated-django"
