[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "escalated-django"
version = "0.5.0"
description = "Embeddable support ticket system for Django"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Escalated Dev", email = "hello@escalated.dev"}]
dependencies = [
    "django>=4.2",
    "inertia-django>=1.0",
    "requests>=2.28",
    # Central translations distributed via PyPI. Ships canonical JSON plus
    # pre-compiled gettext .po/.mo files at
    # `escalated_locale/locale/{lang}/LC_MESSAGES/django.{po,mo}`, which we
    # surface via `escalated.locale.get_central_locale_path()` so host
    # projects can wire it into Django's LOCALE_PATHS.
    "escalated-locale @ git+https://github.com/escalated-dev/escalated-locale.git@v0.1.1#subdirectory=packages/pypi",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "factory-boy>=3.2",
    "faker>=18.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"

[project.urls]
Homepage = "https://github.com/escalated-dev/escalated-django"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "DJ"]
ignore = ["DJ001", "UP017"]

[tool.ruff.format]
quote-style = "double"
